CR from CRUD, it must work but it not work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=VehicleBooker
-spring.datasource.url=jdbc:postgresql://localhost:5432/VehicleBooker
+spring.datasource.url=jdbc:postgresql://localhost:5432/VehicleBooker?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
