--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+logging.file.name=logs${file.separator}logger.log
+logging.pattern.file=[%d{yyyy-MM-dd HH:mm:ss}] %-5level - %msg%n
