--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jacoco</groupId>
-      <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.6</version>
-    </dependency>
-    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <scope>annotationProcessor</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
