--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=VehicleBooker
-spring.datasource.url=jdbc:postgresql://localhost:5432/VehicleBooker
+spring.datasource.url= jdbc:postgresql://host.docker.internal:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
